# CureALL

./: .env  pyproject.toml  setup.py  test.py
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml  model_checkpoint.yaml
configs/data/: default.yaml
configs/experiment/: default.yaml  unimol_only.yaml  unimol_only_sciplex.yaml
configs/hydra/: default.yaml
configs/logger/: wandb.yaml
configs/model/: default.yaml
configs/paths/: default.yaml
configs/train/: default.yaml
configs/trainer/: ddp.yaml  default.yaml
cureall/: eval.py  train.py
cureall/data/: __init__.py  cureall_datamodule.py
cureall/data/components/: __init__.py  atom_type_dataset.py  base_datasets.py  conformer_sample_dataset.py  coord_pad_dataset.py  cropping_dataset.py  data_utils.py  dataset_test.ipynb  key_dataset.py  lmdb_dataset.py  normalize_dataset.py  remove_hydrogen_dataset.py  uce_datasets.py  unimol_datasets.py  unimol_tokenizer.py
cureall/data/tools/: data_preprocessing.py  prepared_mols.py  uce_utils.py
cureall/models/: __init__.py  cureall_module.py  modeling_uce.py  modeling_unimol.py
cureall/models/components/: __init__.py  general_embedding_layer.py  transformer_encoder_with_pair.py  uce_transformer.py
cureall/utils/: __init__.py  instantiators.py  logging_utils.py  metrics.py  model_utils.py  rich_utils.py  utils.py
cureall/utils/losses/: __init__.py  topk_loss.py
